Use several arethusa instances at the same time

--- a/widget.html
+++ b/widget.html
@@ -54,9 +54,9 @@
       arethusa.start('arethusa-tree1', conf, params1, basePath);
     });
 
-    //$.get('./conf2.json', function(conf) {
-    //  arethusa.start('arethusa-text1', conf, params2, basePath);
-    //});
+    $.get('./conf2.json', function(conf) {
+      arethusa.start('arethusa-text1', conf, params2, basePath);
+    });
   </script>
 </body>
 </html>
